# RayTracerJourney

./: .gitattributes  LICENSE  README.md  SpeedUpComputer.sh
Analysis/: README.md
Analysis/Performance/: graphs.m  performance.sh
Analysis/RT_Parallel_CUDA/: Makefile  final_scene.cu
Analysis/RT_Parallel_CUDA/HeaderFiles/: vec3.cuh
Analysis/RT_Parallel_Hybrid_MPI_OPENMP/: Makefile  final_scene.cpp
Analysis/RT_Parallel_Hybrid_MPI_OPENMP/Headers/: color.hpp
Analysis/RT_Parallel_MPI/: Makefile  final_scene.cpp
Analysis/RT_Parallel_MPI/Headers/: lambertian.hpp  (+1 more)
Analysis/RT_Parallel_OPENMP/: Makefile  final_scene.cpp
Analysis/RT_Parallel_PTHREADS/: Makefile  final_scene.cpp  thpool.c
Analysis/RT_Serial_CPP/: Makefile  final_scene.cpp
Chapter10/: Makefile  dielectric.hpp
Chapter11/: Makefile
Chapter8/: diffuse_sphere.cpp
Chapter9/: material.hpp  metal.hpp  shiny_matt_spheres  shiny_matt_spheres.cpp  shiny_matt_spheres_fuzzed.ppm
Chapters12-13/: Makefile  depth_of_field  depth_of_field.cpp  final_scene  final_scene.cpp
Chapters2-3/: Makefile  PPM_image.cpp  color.hpp  ppm_format  ppm_image  vec3.hpp
Chapters4-5/: Makefile  Ray.hpp  gradient  gradient.cpp  gradient_sphere
Chapters6-7/: Makefile  camera.hpp  hittable.hpp  rtweekend.hpp  snormals_sphere_ground_multisample.cpp  sphere.hpp  surface_normals.cpp
Cuda/: Makefile  camera.cuh  color.cuh  depthOfField  depthOfField.cu  dielectricSpheres  diffuseSpheres  diffuseSpheres.cu  finalScene  finalScene.cu  firstCuda  firstCuda.cu  gradient.cu  header.cuh  hittable.cuh  hittable_list.cuh  material.cuh  metalSpheres  multipleSpheres  multipleSpheresAA  multipleSpheresAA.cu  simpleSphere.cu  sphere.cuh  surfaceNormals.cu  testAllocation  testAllocation.cu  vec3.cuh
CudaInOneWeekend/: README.md  dielectricSpheres.cu  diffuseSpheres.cu  finalScene.cu  firstCuda.cu  header.cuh  hittable_list.cuh  material.cuh  multipleSpheres.cu  surface_normals.ppm  viewpoints  viewpoints.cu
CudaInOneWeekend/HeaderFiles/: camera.cuh  hittable.cuh  ray.cuh
CudaInOneWeekend/SourceFiles/: Makefile  finalScene.cu  metalSpheres.cu  multipleSpheresAA.cu  surfaceNormals.cu
CudaTheNextWeek/: Makefile  README.md  bvh.cuh  camera.cuh  checkerSpheres  checkerSpheres.cu  constant_medium.cuh  cornellBox  cornellBox.cu  cornellBoxWithBoxes  cornellBoxWithSmoke.cu  cornellBoxWithTransformedBoxes  finalScene  finalScene.cu  header.cuh  hittable.cuh  light  light.cu  material.cuh  movingSpheres  movingSpheres.cu  moving_sphere.cuh  perlin.cuh  perlinSpheres  perlinSpheres.cu  random.cuh  ray.cuh  rotate_y.cuh  sphere.cuh  texture.cuh  translate.cuh  vec3.cuh
CudaTheNextWeek/HeaderFiles/: aabb.cuh  aarect.cuh  box.cuh  bvh.cuh  camera.cuh  header.cuh  hittable.cuh  hittable_list.cuh  interval.cuh  material.cuh  perlin.cuh  random.cuh  ray.cuh  rotate_y.cuh  sphere.cuh  translate.cuh
CudaTheNextWeek/SourceFiles/: cornellBox.cu  cornellBoxWithBoxes.cu  cornellBoxWithTransformedBoxes.cu  finalScene  finalScene.cu  test_random.cu
InOneWeekend/: README.md
InOneWeekend/Chapter10/: Makefile  dielectric_spheres.cpp  hollow_glass_spheres.cpp
InOneWeekend/Chapter11/: vfov_camera.cpp  viewpoints.cpp
InOneWeekend/Chapter8/: Makefile
InOneWeekend/Chapter9/: Makefile  lambertian.hpp  shiny_matt_spheres.cpp  shiny_matt_spheres.ppm
InOneWeekend/Chapters12-13/: final_scene.cpp
InOneWeekend/Chapters2-3/: PPM_format.cpp  PPM_format.ppm  color.hpp  vec3.hpp
InOneWeekend/Chapters4-5/: Makefile  Ray.hpp  gradient_sphere.cpp
InOneWeekend/Chapters6-7/: hittable.hpp  rtweekend.hpp  snormals_sphere_ground  snormals_sphere_ground.cpp  sphere.hpp
Interactive/: CMakeLists.txt  README.md
Interactive/include/glad/: glad.h
Interactive/src/: main.cpp  render.cu
Interactive/src/HeaderFiles/: ScreenQuad.hpp  Window.hpp  aabb.cuh  camera.cuh  color.cuh  header.cuh  hittable_list.cuh  interval.cuh  quad.cuh  random.cuh  render.cuh  sphere.cuh  texture.cuh  translate.cuh  vec3.cuh
Interactive/src/RT/: render.cu
Interactive/src/RT/HeaderFiles/: bvh.cuh  constant_medium.cuh  material.cuh  render.cuh  rotate_y.cuh
Interactive/src/Shaders/: fragment.glsl  render_pass_frag.glsl  vertex.glsl
Interactive/src/Window/: main.cpp
Interactive/src/Window/HeaderFiles/: Quad.hpp  Window.hpp
TheNextWeek/: README.md
TheNextWeek/Chapter10/: Makefile  cornell_box_fog.ppm  final_scene  final_scene.cpp
TheNextWeek/Chapter2/: Makefile  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  material.hpp  moving_sphere.hpp  moving_spheres  moving_spheres.cpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
TheNextWeek/Chapter3/: aabb.hpp  bvh.hpp
TheNextWeek/Chapter4/: Makefile  texture.hpp  texture_spheres  texture_spheres.cpp
TheNextWeek/Chapter5/: Makefile  perlin.hpp  perlin_spheres  perlin_spheres.cpp
TheNextWeek/Chapter6/: Makefile  earth_sphere  earth_sphere.cpp  rtw_stb_image.hpp
TheNextWeek/Chapter7/: Makefile  aarect.hpp  aarect_light  aarect_light.cpp  cornell_box  cornell_box.cpp
TheNextWeek/Chapter8/: Makefile  box.hpp  cornell_box_with_boxes.cpp  cornell_box_with_tr_boxes  cornell_box_with_tr_boxes.cpp  rotate_y.hpp  translate.hpp
TheNextWeek/Chapter9/: Makefile  constant_medium.hpp  cornell_box_fog  cornell_box_fog.cpp  cornell_box_fog.ppm
(+190 files in other folders)
